static:css:contact_redot.css:fixed content Center alignment

--- a/redotpage/static/css/contact_redot.css
+++ b/redotpage/static/css/contact_redot.css
@@ -90,6 +90,8 @@ float: right;
 .content .content00{
    }
 .content00{
+        margin:0px auto;
+
 margin-top: 93px;
 display:inline-block;
 
@@ -172,6 +174,7 @@ height:300px;
 }
 .container{
   text-align:left;
+  margin-top: 90px;
 }
  .content-button{
     margin-left: 750px;
